--- a/docs/_includes/docs_nav.html
+++ b/docs/_includes/docs_nav.html
@@ -11,6 +11,7 @@
       {% assign collapsed = true %}
       {% for item in section.docs %}
         {% assign item_url = item | prepend:"/docs/" | append:"/" %}
+
         {% if item_url == page.url %}
           {% assign collapsed = false %}
         {% endif %}
@@ -20,7 +21,7 @@
           {% for item in section.docs %}
             {% assign item_url = item | prepend:"/docs/" | append:"/" %}
             {% assign p = site.docs | where:"url", item_url | first %}
-            <a class="list-group-item {% if item_url == page.url %}active{% endif %}" href="{{ p.url  | relative_url }}">{{ p.title }}</a>
+            <a class="list-group-item {% if item_url == page.url %}active{% endif %}" href="{{ p.url  | relative_url }}">{{ p.title | default: '(LINK NOT FOUND)' }}</a>
           {% endfor %}
         </div>
       </div>
