--- a/docs/_sass/_jekyll-doc-theme.scss
+++ b/docs/_sass/_jekyll-doc-theme.scss
@@ -18,14 +18,14 @@ body {
 
 .header-container {
   background-color: white;
-  // background: url('../img/bg.jpg') no-repeat 50% 0;
+  background: url('../img/bg.jpg') no-repeat 50% 0;
   color: black;
   h1 {
     color: #fff;
   }
   // background-attachment: fixed;
   background-size: cover;
-  background-position: center 36%;
+  background-position: center 15%;
   margin-top: -37px;
 }
 
